--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BreadExpress :: <%= controller.controller_name.capitalize %> - <%= controller.action_name.capitalize %></title>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <nav>
+    <div class="nav-wrapper container">
+      <%= link_to "BreadExpress", home_path, { :class=> "brand-logo left" } %>
+      <ul class="right">
+        <li><%= link_to "Orders", home_path %></li> 
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Orders<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        <ul id="dropdown1" class="dropdown-content">
+          <li><%= link_to "Make a order", home_path %></li>
+          <li><%= link_to "View your orders", home_path %></li>
+        </ul>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col s8">
+        <%= yield %>
+        <%= javascript_include_tag "application" %>
+      </div>
 
-    <title>A TITLE GOES HERE</title>
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-  </head>
+      <br><br><br>
 
-  <body>
-    <%= yield %>
+      <div class="col s3 offset-s1 card">
+        <!-- SIDEBAR CONTENT GOES HERE -->
+      
+      </div>
+    </div>
+  </div>
+</body>
+
+    <footer class="container">
+      <div class="row">
+        <div class="col s12 center">
+          <%= render partial: 'partials/footer' %>
+        </div>
+      </div> 
+    </footer>     
   </body>
-</html>
