--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Customers#new</h1>
-<p>Find me in app/views/customers/new.html.erb</p>
+<h3>New customer</h3>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', customers_path %>
