--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,15 +1,14 @@
 <p class="supertiny">&nbsp;</p>
 
 <div id="footer">
-	
-	<%= link_to 'Home', home_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
+  <%= link_to 'Home', home_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
   <%= link_to 'About BreadExpress', about_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
-	<%= link_to 'Contact Us', contact_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
-	<%= link_to 'Privacy Policy', privacy_path %>
-	<br /><br />
-	<div id="copy">
-		Webmaster: <%= mail_to("jeanineh@cmu.edu", encode: "javascript") %> 
-		&nbsp;&nbsp;&copy 2015
-	</div>
+  <%= link_to 'Contact Us', contact_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
+  <%= link_to 'Privacy Policy', privacy_path %>
+  <br /><br />
+  <div id="copy">
+    Webmaster: <%= mail_to "jeanineh@cmu.edu", :encode => "javascript" %> 
+    &nbsp;&nbsp;&copy 2015
+  </div>
 
 </div>
