--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div class="col s12">
 <%= simple_form_for(@customer, html: { class: 'form-horizontal' }) do |f| %>
   <fieldset>
     <legend><%= controller.action_name.capitalize %> Customer</legend>
@@ -10,10 +12,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s6">
+        <div class="col s5">
           <%= f.input :email, label: 'Enter email address here' %>
         </div>
-        <div class="col s6">
+        <div class="col s5">
           <%= f.input :phone, label: 'Enter phone number' %>
         </div>
         <div class="col s4">
@@ -24,5 +26,8 @@
       <%= f.submit nil, class: 'btn' %>
       <%= link_to 'Cancel', customers_path, :class => 'btn deep-orange lighten-3' %>
     </div>
+  <%= link_to 'Back', customers_path %>
   </fieldset>
 <% end %>
+</div>
+</div>
