--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,31 @@
+
 <div class="container">
+</br>
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="app/images/bread1.jpg">
+        <%= image_tag 'bread1.jpg' %>
         <div class="caption center-align">
           <h3>Welcome to Bread Express</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h5 class="light grey-text text-lighten-3">delicious baked goods</h5>
         </div>
       </li>
       <li>
-        <img src="app/images/bread1.jpg"> <!-- random image -->
+        <%= image_tag 'bread1.jpg' %> <!-- random image -->
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="app/images/bread1.jpg"> <!-- random image -->
+        <%= image_tag 'bread1.jpg' %>
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="app/images/bread1.jpg"> <!-- random image -->
+        <%= image_tag 'bread1.jpg' %>
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
