basic crud for address, order, new paths on nav bar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
         <%= image_tag 'bread1.jpg' %>
         <div class="caption center-align">
           <h3>Welcome to Bread Express</h3>
-          <h5 class="light grey-text text-lighten-3">delicious baked goods</h5>
+          <h5 class="light grey-text text-lighten-3">Delicious baked goods.</h5>
         </div>
       </li>
       <li>
