--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BreadExpress :: <%= controller.controller_name.capitalize %> - <%= controller.action_name.capitalize %></title>
+  <title>Bread Express :: <%= controller.controller_name.capitalize %> - <%= controller.action_name.capitalize %></title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -16,13 +16,22 @@
 <body>
   <nav>
     <div class="nav-wrapper container">
-      <%= link_to "BreadExpress", home_path, { :class=> "brand-logo left" } %>
+      <%= link_to "Bread Express", home_path, { :class=> "brand-logo left" } %>
       <ul class="right">
-        <li><%= link_to "Orders", home_path %></li> 
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        <ul id="dropdown1" class="dropdown-content">
+          <li><%= link_to "New Customer", new_customer_path %></li>
+          <li><%= link_to "View Customers", customers_path %></li>
+        </ul> 
         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Orders<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <ul id="dropdown1" class="dropdown-content">
-          <li><%= link_to "Make a order", home_path %></li>
-          <li><%= link_to "View your orders", home_path %></li>
+          <li><%= link_to "Make an order", new_order_path %></li>
+          <li><%= link_to "View your orders", orders_path %></li>
+        </ul>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Addresses<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        <ul id="dropdown1" class="dropdown-content">
+          <li><%= link_to "Add an address", new_address_path %></li>
+          <li><%= link_to "View your addresses", addresses_path %></li>
         </ul>
       </ul>
     </div>
