--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Customers#show</h1>
-<p>Customers</p>
+<table>
+  <tr>
+    <td>
+      <%= render partial: "customer_data" %>
+    </td>
+    <td>
+      <% unless @current_orders.empty? %>
+        <%= render partial: "current_orders" %>
+      <% end %>
+    </td>
+  </tr>
+</table>
+<p>&nbsp;
+  <%= link_to "Edit", edit_customer_path(@customer) %> |
+  <%= link_to "Destroy", @customer, method: :delete, data: { confirm: 'Are you sure you wish to delete this information?' } %> |
+  <%= link_to "View All", customers_path %>
+</p>
+
