--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -6098,7 +6098,7 @@ label {
   position: relative;
   margin-top: 1rem; }
   .input-field label {
-    color: #9e9e9e;
+    color: #33484F;
     position: absolute;
     top: 0.8rem;
     left: 0.75rem;
@@ -6218,6 +6218,7 @@ textarea.materialize-textarea {
 
 [type="radio"]:not(:checked) + label, [type="radio"]:checked + label {
   position: relative;
+  margin-left: 60px;
   padding-left: 35px;
   cursor: pointer;
   display: inline-block;
