--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -4,21 +4,21 @@
   <fieldset>
     <legend><%= controller.action_name.capitalize %> Customer</legend>
       <div class="row">
-        <div class="col s4">
+        <div class="input-field col s4">
           <%= f.input :first_name, label: 'First Name' %>
         </div>
-        <div class="col s4">
+        <div class="input-field col s4">
           <%= f.input :last_name, label: 'Last Name' %>
         </div>
       </div>
       <div class="row">
-        <div class="col s5">
+        <div class="input-field col s6">
           <%= f.input :email, label: 'Enter email address here' %>
         </div>
-        <div class="col s5">
+        <div class="input-field col s6">
           <%= f.input :phone, label: 'Enter phone number' %>
         </div>
-        <div class="col s4">
+        <div class="input-field col s4">
           <%= f.input :active, as: :radio_buttons %>
         </div>
       </div>
