address 2, city for address form, design for address show and index

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -14,7 +14,12 @@
       </div>
       <div class="row">
         <div class="input-field col s9">
-          <%= f.input :street_1, label: 'Street' %>
+          <%= f.input :street_1, label: 'Street Address' %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s9">
+          <%= f.input :street_2, label: 'Street 2' %>
         </div>
       </div>
       <div class="row">
