--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Addresses#show</h1>
-<p>Find me in app/views/addresses/show.html.erb</p>
+<table>
+  <tr>
+    <td>
+      <%= render partial: "address_data" %>
+    </td>
+  </tr>
+</table>
