--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -52,10 +52,8 @@
             <%= "Yes" %>
           <% end %>
       </td>
-	  <td align="center">
-		<%= link_to(image_tag("icons/edit_dg.gif", border: 0), edit_address_path(address))  %>&nbsp;
-		<%= link_to(image_tag("icons/delete_dg.gif", border: 0), address_path(address), confirm: 'Are you sure you wish to delete this information?', method: :delete) %>
-	  </td>
+		  <td><%= link_to('Edit' , edit_address_path(address)) %></td>
+      <td><%= link_to('Delete', address_path(address), confirm: 'Are you sure you wish to delete this information?', method: :delete) %></td>
     </tr>
   <% end %>
 </table>
