customer name in address is a link to info

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Addresses#edit</h1>
-<p>Find me in app/views/addresses/edit.html.erb</p>
+<%= render 'form' %>
+
+<%= link_to 'Show', @address %> |
+<%= link_to 'Back', addresses_path %>
