--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -9,7 +9,7 @@
   </thead>
   <% for address in @active_addresses %>
     <tr>
-      <td><%= address.customer.name %></td>
+      <td><%= link_to(address.customer.name, customer_path(address.customer)) %></td>
       <td><%= address.recipient %></td>
       <td><%= address.street_1 %>
           <% unless address.street_2 == nil %>
@@ -38,7 +38,7 @@
   </thead>
   <% for address in @inactive_addresses %>
     <tr>
-      <td><%= address.customer.name %></td>
+      <td><%= link_to(address.customer.name, customer_path(address.customer)) %></td>
       <td><%= address.recipient %></td>
       <td><%= address.street_1 %>
           <% unless address.street_2 == nil %>
