--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Customers#edit</h1>
-<p>Edit</p>
+<%= render 'form' %>
+
+<%= link_to 'Show', @customers %> |
+<%= link_to 'Back', customers_path %>
