--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<h3>All Orders</h3>
+
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Customer</th>
+    <th>Recipient</th>
+    <th>Cost</th>
+
+  </tr>
+
+<% @orders.each do |order| %>
+  <tr>
+    <td><%= order.date %>
+    <td><%= link_to order.customer.name, customer_path(order.customer) %></td>
+    <td><%= link_to 'Edit', edit_order_path(order) %></td>
+    <td><%= link_to 'Destroy', order, data: { confirm: 'Are you sure?' }, method: :delete %></td>
+  </tr>
+<% end %>
+</table>
+<br />
+<!-- Add the pagination using will_paginate gem -->
+<span class="paginate">
+<%= will_paginate @orders, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
+</span>
+
+<br />
+
+<%= link_to 'New Order', new_order_path %>
