--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -2,6 +2,7 @@
   <tr>
     <td>
       <%= render partial: "customer_data" %>
+      <p>A Bread Express customer since 2015"</p>
     </td>
     <td>
       <% unless @current_orders.empty? %>
