--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<h3> Order Details</h3>
+<p>Thanks for being a Bread Express customer since 2015</p>
+<h5>Recipient: <%= @order.address.recipient %><br><br />
+<h4>Order History</h4>
+<%= render partial: "order_data" %>
+
+
+<p>&nbsp;
+  <%= link_to "Edit", edit_order_path(@order) %> |
+  <%= link_to "Destroy", @order, method: :delete, data: { confirm: 'Are you sure you wish to delete this information?' } %> |
+  <%= link_to "View All", orders_path %>
+</p>
+
+
