--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,3 +1,6 @@
+<% if @addresses.empty? %>
+ <h4>There are no active addresses at this time.</h4>
+<% else %>
 <h1>Addresses</h1><br />
 <br><h4>Active Addresses</h4><br />
 <table class="hoverable">
@@ -23,8 +26,8 @@
             <%= "Yes" %>
           <% end %>
       </td>
-		  <td><%= link_to('Edit' , edit_address_path(address)) %></td>
-		  <td><%= link_to('Delete', address_path(address), confirm: 'Are you sure you wish to delete this information?', method: :delete) %></td>
+		  <td><%= link_to 'Edit' , edit_address_path(address) %></td>
+		  <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, method: :delete %></td> 
     </tr>
   <% end %>
 </table>
@@ -52,8 +55,8 @@
             <%= "Yes" %>
           <% end %>
       </td>
-      <td><%= link_to('Edit' , edit_address_path(address)) %></td>
-      <td><%= link_to('Delete', address_path(address), confirm: 'Are you sure you wish to delete this information?', method: :delete) %></td>
+      <td><%= link_to 'Edit' , edit_address_path(address) %></td>
+      <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, method: :delete %></td> 
     </tr>
   <% end %>
 </table>
@@ -63,5 +66,5 @@
 <span class="smtext">
 <%= will_paginate @addresses, previous_label: "Previous&nbsp;", next_label: "&nbsp;Next" %>
 </span>
-
+<% end %>
 <p><strong><%= link_to "Add A New Address", new_address_path %></strong></p>
