--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,15 @@
     </div>
   </nav>
   <div class="container">
+    <% flash.each do |name, msg| %>
+      <div class="alert-box <%= name == :notice ? "success" : "warning" %> radius">
+        <a href="#" class="close">&times;</a>
+        <%= msg %>
+      </div>
+    <% end %>
     <div class="row">
       <div class="col s12">
+        <!-- MAIN CONTENT GOES HERE -->
         <%= yield %>
         <%= javascript_include_tag "application" %>
       </div>
