--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,5 @@
 <h3> Order Details</h3>
+<h5>Customer: <%= @order.customer.name %></h5><br>
 <p>Thanks for being a Bread Express customer since 2015</p>
 <h5>Recipient: <%= @order.address.recipient %><br><br />
 <h4>Order History</h4>
