pretty customer info for lvl 2

--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -2,6 +2,7 @@
  <h4>There are no active addresses at this time.</h4>
 <% else %>
 <h1>Addresses</h1><br />
+<!--Listing active addresses -->
 <br><h4>Active Addresses</h4><br />
 <table class="hoverable">
   <thead>
@@ -31,6 +32,7 @@
     </tr>
   <% end %>
 </table>
+<!--Listing inactive addresses -->
 <br><h4>Inactive Addresses</h4><br />
 <table class="hoverable">
   <thead>
