--- a/app/views/customers/_customer_data.html.erb
+++ b/app/views/customers/_customer_data.html.erb
@@ -1,14 +1,8 @@
 <h2>Customer Information</h2>
 <h4><%= @customer.first_name %> <%= @customer.last_name %></h4>
+<table class="hoverable">
+  <tr><td><b>Phone:&nbsp;&nbsp;</b> <%= number_to_phone(@customer.phone) %></td></tr>
+  <tr><td><b>Email:&nbsp;&nbsp;</b> <%= mail_to @customer.email, @customer.email, encode: "javascript" %></td></tr>
+  <tr><td><b>Active with BreadExpress?&nbsp;&nbsp;</b><%= @customer.active ? "Yes" : "No" %></td></tr>
+</table>
 
-<b>Phone:&nbsp;&nbsp;</b><br>
-  <%= number_to_phone(@customer.phone) %><br /><br />
-
-<b>Email:&nbsp;&nbsp;</b><br>
-  <%= mail_to @customer.email, @customer.email, encode: "javascript" %><br /><br />
-
-<b>Orders:&nbsp;&nbsp;</b><br>
-  <%= @current_orders %><br /><br />
-
-<b>Active with BreadExpress?:&nbsp;&nbsp;</b>
-  <%= @customer.active %>
