--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -2,12 +2,10 @@
   <tr>
     <td>
       <%= render partial: "customer_data" %>
-      <p>A Bread Express customer since 2015"</p>
+      <p>A Bread Express customer since 2015</p>
     </td>
     <td>
-      <% unless @current_orders.empty? %>
-        <%= render partial: "current_orders" %>
-      <% end %>
+      <%= render partial: "current_orders" %>
     </td>
   </tr>
 </table>
