--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="nav-wrapper container">
       <%= link_to "Bread Express", home_path, { :class=> "brand-logo left" } %>
       <ul class="right">
-        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+        <li><a class="dropdown-button" href="customers/index.html" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <ul id="dropdown1" class="dropdown-content">
           <li><%= link_to "New Customer", new_customer_path %></li>
           <li><%= link_to "View Customers", customers_path %></li>
