--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,6 @@
 <h3> Order Details</h3>
 <h5>Customer: <%= @order.customer.name %></h5><br>
-<p>Thanks for being a Bread Express customer since 2015</p>
+<p>Thanks for being a Bread Express customer since 2015.</p>
 <h5>Recipient: <%= @order.address.recipient %><br><br />
 <h4>Order History</h4>
 <%= render partial: "order_data" %>
