--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,21 +11,21 @@
         </div>
       </li>
       <li>
-        <%= image_tag 'bread1.jpg' %> <!-- random image -->
+        <%= image_tag 'bread2.jpg' %> <!-- random image -->
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <%= image_tag 'bread1.jpg' %>
+        <%= image_tag 'bread3.jpg' %>
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <%= image_tag 'bread1.jpg' %>
+        <%= image_tag 'pasttry2.jpg' %>
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
