--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bread Express :: <%= controller.controller_name.capitalize %> - <%= controller.action_name.capitalize %></title>
-  <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
+  <%= stylesheet_link_tag "materialize.css" %>
+  <!-- Compiled and minified CSS -->
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
 </head>
 <body>
   <nav>
-    <div class="nav-wrapper container">
+    <div class="nav-wrapper container materialize-red lighten-4">
+      <%= image_tag 'logo.png', { :class=> "jeanine-logo" } %>
       <%= link_to "Bread Express", home_path, { :class=> "brand-logo left" } %>
       <ul class="right">
         <li><a class="dropdown-button" href="customers/index.html" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
