--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,9 +1,10 @@
 <% if @addresses.empty? %>
  <h4>There are no active addresses at this time.</h4>
 <% else %>
-<h1>Addresses</h1><br />
+<h3 class="materialize-red-text text-lighten-1">Addresses</h3>
+
 <!--Listing active addresses -->
-<br><h4>Active Addresses</h4><br />
+<h4>Active Addresses</h4>
 <table class="hoverable">
   <thead>
     <th>Customer</th>
@@ -27,8 +28,8 @@
             <%= "Yes" %>
           <% end %>
       </td>
-		  <td><%= link_to 'Edit' , edit_address_path(address) %></td>
-		  <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, method: :delete %></td> 
+		  <td><%= link_to 'Edit' , edit_address_path(address), :class => 'btn materialize-red lighten-5' %></td>
+		  <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, :class => 'btn materialize-red lighten-3', method: :delete %></td> 
     </tr>
   <% end %>
 </table>
@@ -57,8 +58,8 @@
             <%= "Yes" %>
           <% end %>
       </td>
-      <td><%= link_to 'Edit' , edit_address_path(address) %></td>
-      <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, method: :delete %></td> 
+      <td><%= link_to 'Edit' , edit_address_path(address), :class => 'btn materialize-red lighten-5' %></td>
+      <td><%= link_to 'Destroy', address, data: { confirm: 'Are you sure?' }, :class => 'btn materialize-red lighten-3', method: :delete %></td> 
     </tr>
   <% end %>
 </table>
