--- a/app/views/customers/_current_orders.html.erb
+++ b/app/views/customers/_current_orders.html.erb
@@ -1,9 +1,9 @@
-<h2>Order History:</h2>
-<table class="hoverable">
+<h4>Order History:</h4>
+<table class="hoverable responsive-table">
   <thead>
     <tr>
       <th>Date</th>
-      <th<>Amount</th>
+      <th>Amount</th>
     </tr>
   </thead>
 <% for order in @current_orders %>
