--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
   <%= stylesheet_link_tag "materialize.css" %>
   <!-- Compiled and minified CSS -->
+  <link href='http://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet' type='text/css'>
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
@@ -14,7 +15,7 @@
 <body>
   <nav>
     <div class="nav-wrapper container materialize-red lighten-4">
-      <%= image_tag 'logo.png', { :class=> "jeanine-logo" } %>
+      <%= link_to image_tag 'logo.png', { :class=> "jeanine-logo" } %>
       <%= link_to "Bread Express", home_path, { :class=> "brand-logo left" } %>
       <ul class="right">
         <li><a class="dropdown-button" href="customers/index.html" data-activates="dropdown1">Customers<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
@@ -33,8 +34,10 @@
           <li><%= link_to "View your addresses", addresses_path %></li>
         </ul>
       </ul>
+
     </div>
   </nav>
+  </container>
   <div class="container">
     <% flash.each do |name, msg| %>
       <div class="alert-box <%= name == :notice ? "success" : "warning" %> radius">
@@ -43,18 +46,19 @@
       </div>
     <% end %>
     <div class="row">
-      <div class="col s12">
+      <div class="col s12 m9 ">
         <!-- MAIN CONTENT GOES HERE -->
+        
         <%= yield %>
         <%= javascript_include_tag "application" %>
+
       </div>
 
       <br><br><br>
-
-      <div class="col s3 offset-s1 card">
-        <!-- SIDEBAR CONTENT GOES HERE -->
-      
+      <div class="col s12 m3 offset-s9">
+        <%=render partial: 'partials/quick_links' %>
       </div>
+      
     </div>
   </div>
 </body>
