--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
   </div>
 </body>
 
-    <footer class="container">
+    <footer class="page-footer materialize-red lighten-4">
       <div class="row">
         <div class="col s12 center">
           <%= render partial: 'partials/footer' %>
