pretty home page with sidebar

--- a/app/views/customers/_current_orders.html.erb
+++ b/app/views/customers/_current_orders.html.erb
@@ -1,4 +1,4 @@
-<h4>Order History:</h4>
+<h4 class="materialize-red-text text-lighten-1">Order History:</h4>
 <table class="hoverable responsive-table">
   <thead>
     <tr>
