--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-
-<div class="row s12">
+<!-- SLIDER -->
+<div class="row">
 </br>
   <div class="slider">
     <ul class="slides">
@@ -13,7 +13,7 @@
         </div>
       </li>
       <li>
-        <%= image_tag 'bread2.jpg' %> <!-- random image -->
+        <%= image_tag 'bread2.jpg' %> 
         <div class="caption left-align">
           <h3>Baked fresh every day.</h3>
           <h5 class="light grey-text text-lighten-3">We work hard to deliver quality bread.</h5>
@@ -36,5 +36,42 @@
       </li>
     </ul>
   </div>
+</div>
+<!-- FILLER CONTENT -->
+<div class="row">
+  <div class="col s12 m4">
+    <div class="card materialize-red lighten-2">
+      <div class="card-content white-text">
+        <span class="card-title">Food & Nutrition</span>
+        <p>Our bakers work each and every day, hand-shaping and scoring the dough to provide our customers freshly baked bread.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Explore Our Menu</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card materialize-red lighten-3">
+      <div class="card-content white-text">
+        <span class="card-title">News & Events</span>
+        <p>Exciting things happen every day at Bread Express, whether it's improving a recipe or creating a new product.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">See What's New</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card materialize-red lighten-5">
+      <div class="card-content white-text">
+        <span class="card-title">Stories & Recipes</span>
+        <p>From picking the right produce to how we bake our breads, these are the stories that define our commitment to the craft.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+  </div>
+    
 </div>
 
