--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -19,8 +19,6 @@
     <td><%= link_to order.customer.name, customer_path(order.customer) %></td>
     <td><%= order.address.recipient %></td>
     <td>$<%= sprintf "%.2f", order.grand_total %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Destroy', order, data: { confirm: 'Are you sure?' }, method: :delete %></td>
   </tr>
 <% end %>
 </table>
@@ -33,4 +31,4 @@
 <br />
 <% end %>
 
-<%= link_to 'New Order', new_order_path %>
+<%= link_to 'New Order', new_order_path, :class => 'btn materialize-red lighten-2' %>
