links are orange

--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -2006,7 +2006,7 @@ ul {
   list-style-type: none; }
 
 a {
-  color: #039be5;
+  color: #F2AE72;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent; }
 
