--- a/app/views/partials/_quick_links.html.erb
+++ b/app/views/partials/_quick_links.html.erb
@@ -1,3 +1,4 @@
+<br><br><br>
 <div class="side-bar-box z-depth-2">
   <h4 class="side-bar-header"> GET STARTED </h4>
 </div>
@@ -17,6 +18,13 @@
       <div class="collapsible-header"><i class="mdi-maps-local-cafe"></i>Orders</div>
       <div class="collapsible-body side-bar-option"><%= link_to 'View Orders', orders_path, :class=>" materialize-red-text text-lighten-2" %></div>
       <div class="collapsible-body side-bar-option"><%= link_to 'Add a New Order', new_order_path, :class=>" materialize-red-text text-lighten-2" %></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="mdi-maps-local-cafe"></i>Our Products</div>
+      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Freshly Baked Breads</a></div>
+      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Pastries</a></div>
+      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Muffins</a></div>
+      <div class="collapsible-body side-bar-option"><a class="materialize-red-text text-lighten-2" href="#!">Bagels</a></div>
     </li>
   </ul>
 </div>
