--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -44,8 +44,8 @@
         
       </div> 
     <div class="form-actions">
-      <%= f.submit nil, class: 'btn' %>
-      <%= link_to 'Cancel', addresses_path, :class => 'btn deep-orange lighten-3' %>
+      <%= f.submit nil, class: 'btn materialize-red lighten-2' %>
+      <%= link_to 'Cancel', addresses_path, :class => 'btn materialize-red lighten-5' %>
     </div>
   <%= link_to 'Back', addresses_path %>
   </fieldset>
