--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -26,8 +26,8 @@
         </div>
       </div>
       <div class="form-actions">
-        <%= f.submit nil, class: 'btn' %>
-        <%= link_to 'Cancel', orders_path, :class => 'btn deep-orange lighten-3' %>
+        <%= f.submit nil, class: 'btn materialize-red lighten-2' %>
+        <%= link_to 'Cancel', orders_path, :class => 'btn materialize-red lighten-5' %>
       </div>
       <%= link_to 'Back', orders_path %>
     </fieldset>
